# hello-hdl

./: .gitignore  CMakeLists.txt  fsm.v  justfile  main.cpp  readme.md  top.v
src/: main.cpp  top.sv
